@@ -4,6 +4,7 @@ Fixed Notice: Use of undefined constant zone_id - assumed 'zone_id' in admin.php
 Fixed Notice: Use of undefined constant port_type - assumed 'port_type' in admin.php
 Fixed Notice: Use of undefined constant name - assumed 'name' in admin.php
 Fixed some cleanups of '?' to ? (cannot have single quotes around ?)
+Fixed Notice:  Undefined variable: totalmines in check_mines.php
 
 TheMightyDude (22 July 2012)
 --------------------------------------
